# Route-Engine

./: .dockerignore  .env.prod.example  .gitignore  Dockerfile  Procfile  docker-compose.dev.yml  docker-compose.prod.yml  package.json  railway.toml  requirements.txt  wrangler.toml
.github/workflows/: deploy.yml
app/: __init__.py  main.py  workers_main.py
app/api/v1/: __init__.py  dashboard.py  outlets.py
app/core/: config.py  database.py
app/models/: __init__.py  box.py  order.py  outlet.py  route.py  route_node.py
app/repositories/: __init__.py  outlet_repository.py
app/schemas/: __init__.py  box.py  dashboard.py  order.py  outlet.py  route.py  route_node.py
app/services/: __init__.py  dashboard_service.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ActivityList.tsx  Charts.tsx  Header.tsx  MetricCard.tsx  RouteList.tsx  StatCard.tsx  index.ts
frontend/src/hooks/: useApi.ts
frontend/src/types/: index.ts
frontend/src/utils/: colors.ts  formatters.ts
nginx/: nginx.conf
scripts/: init-db.sql  postgres-init.sql  postgres-tuning.sql  pyproject.toml  seed_db.py  wrangler.toml  wrangler.tomlm.txt
