[project]
name = "fastapi-worker"
version = "0.1.0"
description = "FastAPI Worker on Cloudflare"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "gunicorn>=21.2.0",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "geoalchemy2>=0.14.0",
    "shapely>=2.0.2",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "workers-py",
    "workers-runtime-sdk",
]
